--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
+    "@types/topojson": "^3.2.3",
+    "d3": "^7.8.0",
+    "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
+    "topojson": "^3.0.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
