--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-tagcloud": "^1.1.7",
     "@types/styled-components": "^5.1.26",
     "@types/topojson": "^3.2.3",
     "d3": "^7.8.0",
@@ -20,8 +21,11 @@
     "react-feather": "^2.0.10",
     "react-hook-use-window-width": "^2.0.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.9.3",
     "styled-components": "^5.3.6",
+    "TagCloud": "^2.3.2",
     "topojson": "^3.0.2",
+    "tsparticles": "^2.9.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
