--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/topojson": "^3.2.3",
     "d3": "^7.8.0",
     "framer-motion": "^8.0.2",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
