--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio2023",
   "version": "0.1.0",
-  "homepage": "http://JonathanWaller.github.io/portfolio-2023",
+  "homepage": "http://JonathanWaller.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
